new template for drawings index code

--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -10,7 +10,7 @@
 // .container h1 {
 //   font-family: 'Shadows Into Light', cursive;
 //   font-weight: bold;
-//   background-color: #b9e1dc;
+//   background-color: #3EB489;
 //   color: #756c83;
 //   border: 2px solid #756c83;
 //   padding: 20px;
