--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,7 @@
 .banner h1 {
   margin: 0;
   font-family: 'Covered By Your Grace', cursive;
-  color: #b9e1dc;
+  color: #3EB489;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   font-size: 60px;
   font-weight: bold;
@@ -31,7 +31,7 @@
 // DreamCoLab Intro
 .card-join-community {
   align-items: center;
-  border-bottom: 2px solid #b9e1dc;
+  border-bottom: 2px solid #3EB489;
 }
 
 .card-join-community h3 {
@@ -60,7 +60,7 @@
 .brand-card {
 margin: 0 auto;
 padding: 20px;
-border-bottom: 2px solid  #b9e1dc;
+border-bottom: 2px solid  #3EB489;
 
 }
 
