--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -6,7 +6,8 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.3);
   border: white 3px solid;
   // margin-top: 0 !important;
-  margin-top: 30px;
+  margin-top: 80px;
+  margin-bottom: 30px;
 }
 
 .avatar {
