--- a/app/assets/stylesheets/pages/_login_signup.scss
+++ b/app/assets/stylesheets/pages/_login_signup.scss
@@ -25,7 +25,7 @@
   margin-top: 20px;
   font-family: 'Shadows Into Light', cursive;
   font-weight: bold;
-  color:  #b9e1dc;
+  color:  #3EB489;
   padding: 10px;
   text-align: center;
 }
@@ -40,5 +40,5 @@
 
 .button-register:hover {
   opacity: 0.8;
-  color: #b9e1dc;
+  color: #3EB489;
 }
