--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -1,6 +1,6 @@
 <div class='container-profile'>
   <div class="text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-    <%= cl_image_tag @creator.avatar, class:"avatar-bordered w-25 h-25 m-3" %>
+    <%= cl_image_tag @creator.avatar, class:"avatar-bordered w-25 h-25" %>
     <h1><%= @creator.first_name %> <%= @creator.last_name %>, <%= @creator.age %></h2>
     <h2>Location: <%= @creator.city %></h2>
     <%= link_to "Edit Profile", edit_creator_path(@creator), class:"mb-3" %>
