--- a/app/views/collaborations/_dream_gallery.html.erb
+++ b/app/views/collaborations/_dream_gallery.html.erb
@@ -3,14 +3,25 @@
   <% @collaborations.each do |collab| %>
     <% if collab.collab_upload.filename != nil %>
       <div class="col-lg-4 col-md-6 col-sm-12">
-        <div class="card-collab my-3">
-          <%= cl_image_tag collab.drawing.image %>
-          <%= cl_image_tag collab.collab_upload %>
-          <div class="card-collab-infos">
-            <div>
-              <p>"<%= collab.drawing.name %>"</p>
-              <p> <strong><em>inspired by</em></strong> <%= collab.drawing.kid.first_name %></p>
-              <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
+              <div class="card-collab my-3">
+                <%= cl_image_tag collab.drawing.image %>
+                <div class="card-collab-infos">
+                  <p>"<%= collab.drawing.name %>"</p>
+                  <p> <strong><em>inspired by</em></strong> <%= collab.drawing.kid.first_name %></p>
+                </div>
+              </div>
+            </div>
+            <div class="flip-card-back">
+              <div class="card-collab my-3">
+                <%= cl_image_tag collab.collab_upload %>
+                <div class="card-collab-infos">
+                  <p>"<%= collab.drawing.name %>"</p>
+                  <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -18,3 +29,5 @@
     <% end %>
   <% end %>
 </div>
+
+
