created new format for cards in indexes and made some styling changes

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -7,7 +7,7 @@
   border: white 3px solid;
   // margin-top: 0 !important;
   margin-top: 80px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 
 .avatar {
@@ -16,6 +16,7 @@
   height: 40px;
   border-radius: 50%;
   margin-top: 0 !important;
+  background-size: cover;
 }
 
 
