--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   background-color:  #fbfbfb;
   background:rgba(0,0,0,0.2);
   width: 100%;
-  color: #3EB489;
+  color: #50C878;
   box-shadow: rgba(0,0,0,0.2);
 }
 
