--- a/app/views/kids/new.html.erb
+++ b/app/views/kids/new.html.erb
@@ -1,4 +1,4 @@
-<section style="height: 100vh">
+<div class="full-height-page">
   <div class="container d-flex justify-content-between">
     <div class="sub-image col-xs-12">
       <%= image_tag 'kidhero.jpg', class:'image' %>
@@ -25,4 +25,4 @@
       <!-- </div> -->
     </div>
   </div>
-</section>
+</div>
