--- a/app/assets/stylesheets/pages/_profiles.scss
+++ b/app/assets/stylesheets/pages/_profiles.scss
@@ -25,7 +25,7 @@
 
 .my-art-card h1 {
   font-family: 'Shadows Into Light', cursive;
-  color: #3EB489;
+  color: #50C878;
   margin-top: 50px;
   font-weight: bold;
 }
