--- a/app/views/user_mailer/booked.html.erb
+++ b/app/views/user_mailer/booked.html.erb
@@ -1,4 +1,3 @@
-<h1>User#welcome</h1>
-<p>Hi <%= @kid.first_name %>,</p>
+<p>Hi <%= @user.first_name %>,</p>
 <p>Glad to have you back, visit our website to see more </p>
 <p>See ya!</p>
