tags on the child's profile for fav things and dislikes

--- a/app/views/kids/edit.html.erb
+++ b/app/views/kids/edit.html.erb
@@ -8,8 +8,8 @@
         <%= f.input :avatar, placeholder: "Upload your favourite picture" %>
         <%= f.input :avatar_cache, as: :hidden %>
         <%= f.input :city, placeholder: "Which city do you live in?" %>
-        <%= f.input :favourite_things, placeholder: "What are your favourite things?" %>
-        <%= f.input :dislikes, placeholder: "What don't you like?" %>
+        <%= f.input :favourite_thing_list, placeholder: "What are your favourite things?" %>
+        <%= f.input :dislike_list, placeholder: "What don't you like?" %>
         <%= f.input :description, placeholder: "How would you describe yourself?" %>
         <%= f.submit 'Submit!', class: 'button-register my-3' %>
       </div>
