created carousel and fixed footer positions, design changes throughout pages

--- a/app/views/collaborations/show.html.erb
+++ b/app/views/collaborations/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center col-sm-8 offset-sm-2 my-3 p-3">
+<div class="title text-center col-sm-8 offset-sm-2 my-3 p-3">
   <h1>Finished Collab</h1>
 </div>
 <div class="together-card d-flex flex-column text-center col-sm-8 offset-sm-2 my-3 p-3">
