--- a/app/views/pages/dream_gallery.html.erb
+++ b/app/views/pages/dream_gallery.html.erb
@@ -1,4 +1,6 @@
-<div class="container">
-  <h1>Dream Gallery</h1>
+<div class="full-height-page">
+  <div class="title text-center">
+    <h1>Dream Gallery</h1>
+  </div>
+  <%= render 'collaborations/dream_gallery' %>
 </div>
-<%= render 'collaborations/dream_gallery' %>
