--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
     <ul class="navbar-nav mr-auto">
       <% if current_user.present? %>
         <li class="nav-item active">
-          <%= link_to "Home |", drawings_path, class: "nav-link" %>
+          <%= link_to "Drawings |", drawings_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "My Collaborations |", collaborations_path, class: "nav-link" %>
