--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,11 +2,13 @@
 
 .card-collab {
   overflow: hidden;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background: #fbfbfb;
+  box-shadow: 0 0 25px rgba(0,0,0,0.4);
   overflow: hidden;
-  width: 400px;
+  margin: 30px auto;
+  width: 450px;
   padding: 15px;
+
   }
 
 .my-art-card {
@@ -19,6 +21,7 @@
   height: 300px;
   width: 100%;
   object-fit: cover;
+  padding: 20px;
 }
 
 .card-collab h2 {
@@ -40,6 +43,7 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+  flex-direction: column;
 }
 
 .card-collab-infos .card-collab-user {
@@ -49,11 +53,20 @@
   width: 40px;
 }
 
+.card-collab-infos h5 {
+  font-family: 'Cutive Mono', monospace;
+}
+
 // TEST flip card CSS
 
 .flip-card {
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  height: 400px;
+  overflow: hidden;
+}
 
+.flip-card img {
+  max-width: 100%;
 }
 
 /* This container is needed to position the front and back side */
@@ -65,6 +78,7 @@
   transition: transform 0.8s;
   transform-style: preserve-3d;
   backface-visibility: hidden;
+
 }
 
 /* Do an horizontal flip when you move the mouse over the flip box container */
@@ -78,6 +92,8 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  background-size: cover;
+  background-position: center;
 }
 
 
