--- a/app/views/collaborations/_dream_gallery.html.erb
+++ b/app/views/collaborations/_dream_gallery.html.erb
@@ -3,31 +3,28 @@
   <% @collaborations.each do |collab| %>
     <% if collab.collab_upload.filename != nil %>
       <div class="col-lg-4 col-md-6 col-sm-12">
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <div class="card-collab my-3">
-                <%= cl_image_tag collab.drawing.image %>
-                <div class="card-collab-infos">
-                  <p>"<%= collab.drawing.name %>"</p>
-                  <p> <strong><em>inspired by</em></strong> <%= collab.drawing.kid.first_name %></p>
-                </div>
+        <div class="card-collab my-3">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front" style="background-image: url('<%= cl_image_path collab.drawing.image %>')">
+
+              </div>
+              <div class="flip-card-back" style="background-image: url('<%= cl_image_path collab.collab_upload %>')">
+
               </div>
             </div>
-            <div class="flip-card-back">
-              <div class="card-collab my-3">
-                <%= cl_image_tag collab.collab_upload %>
-                <div class="card-collab-infos">
-                  <p>"<%= collab.drawing.name %>"</p>
-                  <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
-                </div>
-              </div>
-            </div>
+          </div>
+          <div class="card-collab-infos">
+            <h5>"<%= collab.drawing.name %>"</h5>
+            <p> <strong><em>inspired by</em></strong> <%= collab.drawing.kid.first_name %></p>
+            <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
           </div>
         </div>
       </div>
     <% end %>
   <% end %>
 </div>
+
+
 
 
