renaming the dislikes column in user to worst_things

--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -17,7 +17,7 @@
 
     <h4>Dislikes: </h4>
     <div class="tagging"><i class="fas fa-tag"></i>
-      <% @kid.dislikes.each do |t| %>
+      <% @kid.worst_things.each do |t| %>
         <span class="tag-box"><%= t %></span>
       <% end %>
     </div>
