--- a/app/views/kids/edit.html.erb
+++ b/app/views/kids/edit.html.erb
@@ -9,7 +9,7 @@
         <%= f.input :avatar_cache, as: :hidden %>
         <%= f.input :city, placeholder: "Which city do you live in?" %>
         <%= f.input :favourite_thing_list, placeholder: "What are your favourite things?" %>
-        <%= f.input :dislike_list, placeholder: "What don't you like?" %>
+        <%= f.input :worst_thing_list, placeholder: "What don't you like?" %>
         <%= f.input :description, placeholder: "How would you describe yourself?" %>
         <%= f.submit 'Submit!', class: 'button-register my-3' %>
       </div>
