--- a/app/views/collaborations/_dream_gallery.html.erb
+++ b/app/views/collaborations/_dream_gallery.html.erb
@@ -1,17 +1,15 @@
 <!-- Index for ALL FINISHED COLLABS   -->
 <div class="row my-3 p-3">
-  <% @collaborations.each do |collab| %>
+  <% collabs = limit.present? ? @collaborations.first(limit) : @collaborations  %>
+  <% collabs.each do |collab| %>
     <% if collab.collab_upload.filename != nil %>
       <div class="col-lg-4 col-md-6 col-sm-12">
         <div class="card-collab my-3">
           <div class="flip-card">
             <div class="flip-card-inner">
               <div class="flip-card-front" style="background-image: url('<%= cl_image_path collab.drawing.image %>')">
-
               </div>
               <div class="flip-card-back" style="background-image: url('<%= cl_image_path collab.collab_upload %>')">
-
-
               </div>
             </div>
           </div>
@@ -20,12 +18,10 @@
             <p> <strong><em>inspired by</em></strong> <%= collab.drawing.kid.first_name %></p>
             <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
             <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %>
-            <% end %> 
+            <% end %>
           </div>
         </div>
       </div>
     <% end %>
   <% end %>
 </div>
-
-
