--- a/app/views/pages/dream_gallery.html.erb
+++ b/app/views/pages/dream_gallery.html.erb
@@ -1,6 +1,4 @@
-<div class="full-height-page">
-  <div class="title text-center">
-    <h1>Dream Gallery</h1>
-  </div>
-  <%= render 'collaborations/dream_gallery' %>
+<div class="title text-center">
+  <h1>Dream Gallery</h1>
+  <%= render 'dream_gallery', limit: nil %>
 </div>
