--- a/app/views/user_mailer/completed.html.erb
+++ b/app/views/user_mailer/completed.html.erb
@@ -1,3 +1,6 @@
 <p>Hi <%= @user.first_name %>,</p>
-<p>Your latest collaboration has been uploaded, visit our website to see more </p>
-<p>See ya!</p>
+<p>Your artist has just uploaded the finished collaboration. </p>
+<p>Please login to your DreamCoLab account to discover it.</p>
+<p>With love,</p>
+<p>Team DreamCoLab</p>
+<%= image_tag "logo.png", class:"image-logo" %>
