--- a/app/views/user_mailer/completed.text.erb
+++ b/app/views/user_mailer/completed.text.erb
@@ -1,1 +1,6 @@
-<%= @greeting %>
+ Hi <%= @user.first_name %>,
+Your artist has just uploaded the finished collaboration.
+Please login to your DreamCoLab account to discover it.
+With love,
+Team DreamCoLab
+
