--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,3 +7,20 @@
   border: 1px solid #756c83;
 
 }
+
+// simple form submit button "collab complete"
+
+
+.complete-collab-button {
+  background-color: #f38181;
+  color: white;
+  font-weight: bold;
+  padding: 10px;
+  border-radius: 10px;
+  margin-right: 10px;
+  font-family: 'Cutive Mono', monospace;
+  font-size: 15px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
+
+
