--- a/app/views/collaborations/_creator_collab.html.erb
+++ b/app/views/collaborations/_creator_collab.html.erb
@@ -8,35 +8,44 @@
       <% if current_user.id == collab.creator_id %>
         <% if collab.collab_upload.filename == nil %>
           <div class="col-4 mx-3">
-            <div class="card-collab mx-3 my3">
+            <div class="card-collab upload mx-3 my3">
               <%= cl_image_tag collab.drawing.image %>
-              <div class="card-collab-infos">
+              <div class="card-collab-infos-upload" style="position: relative;">
                 <div>
-                  <p><%= collab.drawing.name %> by <%= collab.drawing.kid.first_name %></p>
-                  <p>Created at: <%= collab.created_at.strftime("%d / %m / %Y") %></p>
-                  <p>Date due: <%= (collab.created_at + 7.days).strftime("%d / %m / %Y") %></p>
+                  <p>"<%= collab.drawing.name %>" by <%= collab.drawing.kid.first_name %></p>
+                  <div class="collaboration-dates">
+                    <p><strong><em>Booked on: </em></strong> <%= collab.created_at.strftime("%d / %m / %Y") %></em></strong></p>
+                    <p><strong><em>Date due: </em></strong> <%= (collab.created_at + 7.days).strftime("%d / %m / %Y") %></em></strong></p>
+                  </div>
                   <%= simple_form_for [current_user, collab], html: {novalidate: false} do |f| %>
                     <%= f.input :collab_upload, :required => true %>
                     <%= f.input :collab_upload_cache, as: :hidden %>
-                    <%= f.submit "Complete Collab!", class:"btn btn-primary my-3" %>
-                    <%= cl_image_tag collab.creator.avatar, class:"card-collab-user avatar-bordered" %>
+                    <%= f.submit "Complete Collaboration!", class:"complete-collab-button" %>
                   <% end %>
+
                 </div>
+                <%= cl_image_tag collab.drawing.kid.avatar, class:"card-collab-user avatar-bordered upload" %>
+
               </div>
             </div>
           </div>
         <% elsif collab.collab_upload.filename != nil %>
-          <div class="col-4 mx-3">
-            <div class="card-collab mx-3 my-3">
-              <%= cl_image_tag collab.drawing.image %>
-              <%= cl_image_tag collab.collab_upload %>
-              <div class="card-collab-infos">
-                <div>
-                  <p><%= collab.drawing.name %> by <%= collab.drawing.kid.first_name %></p>
-                  <p>Created at: <%= collab.created_at.strftime("%d / %m / %Y") %></p>
-                  <p>COMPLETED</p>
-                  <p><%= link_to 'View Collaboration', creator_collaboration_path(collab.creator, collab)  %></p>
+          <div class="col-lg-4 col-md-6 col-sm-12">
+            <div class="card-collab my-3">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front" style="background-image: url('<%= cl_image_path collab.drawing.image %>')">
+                  </div>
+                  <div class="flip-card-back" style="background-image: url('<%= cl_image_path collab.collab_upload %>')">
+                  </div>
                 </div>
+              </div>
+              <div class="card-collab-infos">
+                <h5>COMPLETED: "<%= collab.drawing.name %>"</h5>
+                <p> <strong><em>inspired by</em></strong> <%= collab.drawing.kid.first_name %></p>
+                <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
+                <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %>
+                <% end %>
               </div>
             </div>
           </div>
