--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -160,3 +160,12 @@ label.file.required {
 .form-control-file, .form-control-range {
 padding-top: 10px
 }
+
+.collab-sectioning h1 {
+  margin-top: 20px;
+  font-family: 'Shadows Into Light', cursive;
+  font-weight: bold;
+  color: #50C878;
+  padding: 10px;
+  text-align: center;
+}
