changed cards show format and added links on show page back to users profiles for view

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -7,3 +7,12 @@
   border: 1px solid #756c83;
 
 }
+
+.btn-view-more {
+  border-radius: 24px;
+  padding: 10px;
+  background-color: #50C878;
+  color: black;
+  font-family: 'Cutive Mono', monospace;
+  font-weight: bold;
+}
