--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -38,7 +38,7 @@
 // DreamCoLab Intro
 .card-join-community {
   align-items: center;
-  border-bottom: 2px solid #b9e1dc;
+  // border-bottom: 2px solid #b9e1dc;
 }
 
 .card-join-community h3 {
@@ -69,7 +69,7 @@
 .brand-card {
 margin: 0 auto;
 padding: 20px;
-border-bottom: 2px solid  #b9e1dc;
+border-top: 2px solid  #b9e1dc;
 }
 
 .brand-card-gallery {
