--- a/app/assets/stylesheets/pages/_profiles.scss
+++ b/app/assets/stylesheets/pages/_profiles.scss
@@ -5,9 +5,10 @@
 
 .container-profile h1 {
  font-family: 'Shadows Into Light', cursive;
-  color: #756c83;
+  color: #50C878;
   font-weight: bold;
   font-size: 50px;
+  text-shadow: 1px 1px 1px;
 }
 
 .container-profile h2 {
