--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,11 +3,12 @@
   height: 40px;
   object-fit: cover;
   border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.3);
+  box-shadow: 0 1px 5px rgba(0,0,0,0.3);
   border: white 3px solid;
   // margin-top: 0 !important;
   margin-top: 80px;
   margin-bottom: 40px;
+  background-color: white;
 }
 
 .avatar {
