--- a/app/views/collaborations/_dream_gallery.html.erb
+++ b/app/views/collaborations/_dream_gallery.html.erb
@@ -20,6 +20,7 @@
             <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %>
             <% end %>
           </div>
+          <%= link_to "View Full Collab", creator_collaboration_path(collab.creator, collab), class:"btn-view-more" %>
         </div>
       </div>
     <% end %>
