--- a/app/views/collaborations/show.html.erb
+++ b/app/views/collaborations/show.html.erb
@@ -1,12 +1,20 @@
+<!-- <i class="fas fa-hand-point-left ml-3 my-3"></i><%#= link_to "Back to My Collabs", collaborations_path(@creator), class:"text-success my-3 p-3" %> -->
 <div class="title text-center col-sm-8 offset-sm-2 my-3 p-3">
   <h1>Finished Collab</h1>
 </div>
-<div class="together-card d-flex flex-column text-center col-sm-8 offset-sm-2 my-3 p-3">
+<div class="card-collab-infos text-center text-large">
+  <h2>"<%= @collaboration.drawing.name %>"</h2>
+</div>
+<!-- Image with Flip -->
+<div class="together-card lg-col-8 col-sm-8 offset-sm-2 my-3 p-3">
   <div class="drawing-image">
     <p><%= cl_image_tag @collaboration.drawing.image %></p>
   </div>
-  <div class="card-collab">
-    <h1>"<%= @collaboration.drawing.name %>"</h1>
+  <div class="finished-collab-image">
     <p><%= cl_image_tag @collaboration.collab_upload %></p>
   </div>
+</div>
+<div class="card-collab-infos text-center mb-3">
+  <p> <strong><em>inspired by</em></strong> <%= link_to @collaboration.drawing.kid.first_name, kid_path(@collaboration.drawing.kid), class:"text-primary ml-3" %></p>
+  <p><strong><em>brought to life by</em></strong> <%= link_to @collaboration.creator.first_name, creator_path(@collaboration.creator), class:"text-primary ml-3" %></p>
 </div>
