--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,6 +41,7 @@
 <div class="brand-card col-sm-8 offset-sm-2 text-center">
   <h1>DREAM GALLERY.</h1>
   <p >Our dream gallery is filled with creations and collaborations between dreamers and creators from all over the world! Take a look at some of our latest works: </p>
+  <label><%= link_to "Visit our full Dream Gallery", dream_gallery_path  %></label>
 </div>
 <div class="brand-card-gallery">
   <%= render "dream_gallery", limit: 3 %>
