--- a/app/views/shared/_homenav.html.erb
+++ b/app/views/shared/_homenav.html.erb
@@ -1,3 +1,3 @@
 <div class="navbar-home">
-  <%= link_to "Login", new_user_session_path, class: "nav-link-home" %>
+  <%= link_to "Jump In!", new_user_session_path, class: "nav-link-home" %>
 </div>
