change collab title font to cutive mono

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -59,6 +59,11 @@
 
 // TEST flip card CSS
 
+.card-collab-infos h5 {
+  font-family: 'Cutive Mono', monospace;
+  font-weight: bold;
+}
+
 .flip-card {
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
   height: 400px;
