--- a/app/views/pages/dream_gallery.html.erb
+++ b/app/views/pages/dream_gallery.html.erb
@@ -1,4 +1,5 @@
 <div class="title text-center">
   <h1>Dream Gallery</h1>
   <%= render 'dream_gallery', limit: nil %>
+  <%= render 'drawings/download' %>
 </div>
