--- a/app/views/collaborations/_creator_collab.html.erb
+++ b/app/views/collaborations/_creator_collab.html.erb
@@ -48,7 +48,7 @@
               </div>
             </div>
             <div class="card-collab-infos">
-              <h5>COMPLETED: "<%= collab.drawing.name %>"</h5>
+              <h5>"<%= collab.drawing.name %>"</h5>
               <p> <strong><em>inspired by</em></strong> <%= collab.drawing.kid.first_name %></p>
               <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
               <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %>
