losts of small changes to render pages and change formatting

--- a/app/views/collaborations/_creator_collab.html.erb
+++ b/app/views/collaborations/_creator_collab.html.erb
@@ -1,7 +1,7 @@
 <!-- Index for ALL COLLABS FOR SPECIFIC CREATOR -->
 <div class="full-height-page">
   <div class="title text-center mb-3">
-    <h1><%= current_user.first_name %>'s  Collaborations Gallery</h1>
+    <h1>My Collaborations Gallery</h1>
   </div>
   <div class="collab-sectioning">
     <h1>Booked Collaborations</h1>
