--- a/app/views/kids/show.html.erb
+++ b/app/views/kids/show.html.erb
@@ -27,32 +27,34 @@
   </div>
 </div>
 <!-- My artwork -->
-<div class="title text-center">
-  <h1>My Drawings</h1>
+  <div>
+  <%= render 'drawings/kid_drawings', limit: nil %>
 </div>
-<div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-  <div class="row">
-    <div class="image-card col-md-4 col-sm-8">
-      <% @kid.drawings.each do |drawing| %>
-        <p><%= cl_image_tag drawing.image %></p>
-      <% end %>
-    </div>
-  </div>
-  <% if current_user.type == "Kid" %>
-    <p><%= link_to "Add a new drawing!", new_kid_drawing_path(@kid) %></p>
-    <% end %>
-  </div>
   <!-- My collabs -->
   <div class="title text-center">
     <h1>My Collaborations</h1>
-    <div class="my-art-card text-center col-lg-8 offset-lg-2 col-md-6 col-sm-8 offset-sm-2">
-      <div class="row">
-        <% @kid.collaborations.each do |collab| %>
-            <div class="image-card col-md-4 col-sm-8">
-              <p><%= cl_image_tag collab.collab_upload %></p>
+  </div>
+    <div class="row my-3 p-3">
+      <% completed = current_user.collaborations.select{|x| x.collab_upload.filename != nil}%>
+      <% completed.each do |collab| %>
+      <div class="col-lg-4 col-md-6 col-sm-12">
+        <div class="card-collab my-3">
+          <div class="flip-card">
+            <div class="flip-card-inner">
+              <div class="flip-card-front" style="background-image: url('<%= cl_image_path collab.drawing.image %>')"></div>
+              <div class="flip-card-back" style="background-image: url('<%= cl_image_path collab.collab_upload %>')"></div>
             </div>
-        <%end%>
+          </div>
+          <div class="card-collab-infos">
+            <h5>"<%= collab.drawing.name %>"</h5>
+            <p> <strong><em>inspired by</em></strong> <%= collab.drawing.kid.first_name %></p>
+            <p><strong><em>brought to life by</em></strong> <%= collab.creator.first_name %></p>
+            <%= link_to collaboration_upvote_path(collab) do %> <i class="far fa-heart"></i>  <%= "#{collab.votes_for.size}" %><% end %>
+          </div>
+        </div>
       </div>
+      <% end %>
     </div>
+  </div>
   </div>
 
