--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -73,8 +73,8 @@ border-top: 2px solid  #b9e1dc;
 }
 
 .brand-card-gallery {
-      display: flex;
-    justify-content: center;
+    display: flex;
+    justify-content: space-between;
 
 }
 
