wip. two missing: 1) where to get the id 2) where to render them?

--- a/app/views/drawings/_download.html.erb
+++ b/app/views/drawings/_download.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "click here to download", creator_download_path %>
+<%= link_to "click here to download", collaboration_download_path(@collaboration.creator, @collaboration) %>
