--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,48 @@
 @import "components/navbar";
 @import "components/title";
 @import "components/tag";
+
+@import "bourbon";
+@import "base/base";
+
+
+.container {
+  margin: 0 auto;
+  max-width: 36em;
+  padding: 2em 0 0;
+}
+
+.header {
+  background: rgba(0, 0, 0, .05);
+  border-radius: 3px;
+  margin: 0 0 1em;
+  padding: .5em;
+}
+
+.chat {
+  height: 20em;
+  width: 100%;
+}
+
+.messages {
+  border: 1px solid rgba(0, 0, 0, .1);
+  border-radius: 3px;
+  height: 10em;
+  margin: 0 0 .5em;
+  overflow-y: scroll;
+  padding: .5em;
+}
+
+.message {
+  .user {
+    font-weight: bold;
+
+    &.me {
+      color: #b6191e;
+    }
+  }
+}
+
+.other-links {
+  margin: .5em 0 0;
+}
