--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_include_tag 'https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js' %>
+    <%= javascript_include_tag 'https://media.twiliocdn.com/sdk/js/chat/v3.0/twilio-chat.min.js' %>
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
   <body>
@@ -17,9 +19,11 @@
     <% else %>
       <%= render 'shared/navbar' %>
     <% end %>
-    <%= yield %>
-    <%= javascript_include_tag 'application' %>
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= javascript_pack_tag 'application' %>
+    <%= javascript_include_tag 'application' %>
     <%= render 'shared/footer' %>
   </body>
 </html>
