--- a/app/views/creators/new.html.erb
+++ b/app/views/creators/new.html.erb
@@ -1,7 +1,7 @@
 <div class="full-height-page">
   <div class="container d-flex justify-content-between">
     <div class="sub-image col-xs-12">
-      <%= image_tag 'artistphoto.jpeg', class:'image' %>
+      <%= image_tag 'artistphoto.jpg', class:'image' %>
     </div>
     <div class='container-login col-xs-12 col-sm-4' >
       <h1>I'm a Creator.</h1>
